--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#contato">Contato</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="www.sonardigitall.blogspot.com.br">Nosso Blog</a>
+                        <a href="www.sonardigitall.blogspot.com.br">Nosso Blog</a>
                     </li>
                 </ul>
             </div>
